@startuml
class Image {
+Name: string
+Bucket: string
+Bytes: []byte
+Hour: string
+Day: string
+Month: string
+Year: string

}
class FtpToInputAdapter {
-imageProcessingService: InputImagePort
-video2ImageService: InputVideoPort

}
class Image2S3Adapter {


}
class KafkaAdapter {


}
class Image2QueueService {
-imageToQueueAdapter: QueueImagePort

}
class ImageProcessingService {
-image2QueueService: Image2QueueService
-storageImageAdapter: StorageImagePort

}
class Video2ImageService {
-imageProcessingService: ImageProcessingService

}
ImageProcessingService --> Image2QueueService
Video2ImageService --> ImageProcessingService
@enduml